force-app/main/default/objects/Medical_Insurence__c/Medical_Insurence__c.object-meta.xml
<CustomObject>
    <label>Medical Insurence</label>
    <nameField>
        <label>Medical Insurence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Insurences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>