force-app/main/default/objects/Medical_Insurence__c/fields/Insurance_Value__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Value__c</fullName>
    <label>Insurance Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>