force-app/main/default/objects/Medical_Insurence__c/fields/Insured_Person__c.field-meta.xml
<CustomField>
    <fullName>Insured_Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Insured Person</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Medical Insurences</relationshipLabel>
    <relationshipName>Medical_Insurences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>