force-app/main/default/objects/Medical_Insurence__c/fields/Insurence_Id__c.field-meta.xml
<CustomField>
    <fullName>Insurence_Id__c</fullName>
    <label>Insurence Id</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>